tests/compile_fail/multiple_metavar_names.stderr
error: Only one Metavariable/Generic Type name can exist within a branch. Found $G while looking for $T
 --> tests/compile_fail/multiple_metavar_names.rs:7:50
  |
7 |             println!("{}", core::mem::size_of::<$G>());
  |                                                  ^
